# tasks-ai

./: .gitignore  pyproject.toml
app/: main.py
app/api/: auth.py  tasks.py
app/core/: db.py  utils.py
app/models/: tasks.py  users.py
